Change raw backslashes to &#92; to prevent their being lost.

--- a/doc/infosrc/lang.2
+++ b/doc/infosrc/lang.2
@@ -136,8 +136,8 @@ character set, and for which there is a glyph in the font.
 <HR>
 <OL TYPE="1">
 <LI> In quoted strings in DOT, the only escaped character is double-quote
-("). That is, in quoted strings, the dyad \" is converted to "; all other
-characters are left unchanged. In particular, \\ remains \\. Layout
+("). That is, in quoted strings, the dyad &#92;" is converted to "; all other
+characters are left unchanged. In particular, &#92;&#92; remains &#92;&#92;. Layout
 engines may apply additional escape sequences.
 </OL>
 </BODY>
