Note that none is a synonym for plaintext

--- a/doc/infosrc/html.1
+++ b/doc/infosrc/html.1
@@ -32,7 +32,7 @@ Although HTML labels are not, strictly speaking, a shape, they can be
 viewed as a generalization of the record shapes described above. 
 In particular, if a node has set its 
 <A HREF=attrs.html#k:shape><TT>shape</TT></A>
-attribute to <TT>plaintext</TT>, the HTML label will be the node's
+attribute to <TT>none</TT> or <TT>plaintext</TT>, the HTML label will be the node's
 shape. On the other hand, if the node has any other shape (except 
 <TT>point</TT>), the HTML label will be embedded within the node the
 same way an ordinary label would be.
