Add note on the need to use HTML escape sequences in HTML strings.

--- a/doc/infosrc/html.1
+++ b/doc/infosrc/html.1
@@ -20,6 +20,11 @@ can describe multiple lines of variously aligned text as provided by ordinary
 label can specify a table similar to those provided by HTML,
 with different graphical attributes at each level.
 <P>
+As <A HREF=lang.html#html>HTML strings</A> are processed like HTML input, any use of
+the &quot;, &amp;, &lt;, and &gt; characters in literal text or in attribute values
+need to be replaced by the corresponding escape sequence. For example, if you want to
+use  &amp; in an <TT>href</TT> value, this should be represented as  &amp;amp;.
+<P>
 <B>NOTE:</B> The features and syntax supported by these labels are
 modeled on HTML. However, there are many aspects that are relevant
 to Graphviz labels that are not in HTML and, conversely, HTML allows
