--- a/cmd/gvmap/gvmap.1
+++ b/cmd/gvmap/gvmap.1
@@ -36,12 +36,59 @@ time is proportional to k; hence, for large graphs, a small value of k is
 suggested. If k = -1, a suitable value of k is automatically selected based on 
 the graph size. By default k = -1.
 .TP
+.BI \-b " v"
+The real number v specified the line width used to draw the polygon boundaries, with v < 0 for no line. By default v = 0.
+.TP
+.BI \-c " k"
+The integer k specified color scheme used to color the countries. By default k = 1.
+.TP
+   Acceptable values are:
+   0 : no polygons
+   1 : pastel
+   2 : blue to yellow
+   3 : white to red
+   4 : light grey to red
+   5 : primary colors
+   6 : sequential single hue red
+   7 : sequential single hue lighter red
+   8 : light grey
+.TP
+.BI \-C " d"
+The integer d specified the maximum number of clusters (countries) allowed. By default d = 0, which means that there is no limit.
+.TP
+.BI \-d " d"
+The integer d specified the random seed used during color assignment optimization that maximize color difference between neighbpring countries.
+.TP
 .BI \-e
 If specified, edges will be included in the final output.
 .TP
 .BI \-k
 Increases randonesss of boundary
 .TP
+.TP
+.BI \-g " c"
+Specified the bounding box color. If not specified, a bounding box is not drawn. 
+.TP
+.BI \-k 
+When specified, increase the randomesss of outer boundary.
+.TP
+.BI \-r " k"
+The number of random points k (integer) used to define sea and lake boundaries. If 0, auto assigned. By default v = 0
+.TP
+.BI \-s " v"
+The real number v specified the depth of the sea and lake shores in points. If 0, auto assigned. By default v = 0.
+.TP
+.BI \-O  
+Do NOT do color assignment optimization that maximizes color difference between neighboring countries
+.TP
+.BI \-v 
+Verbose mode.
+.TP
+.BI \-z " c" 
+Specified the polygon line color. Default is black.
+
+
+
 .BI \-s " d" 
 The real number d specifies the depth of the shore in points. If 0, the depth is selected automatically. By default d = 0.
 .TP
@@ -63,6 +110,7 @@ The shell script gvmap.sh provides a shorthand for such pipelines. For example, 
 above pipeline can be achieved using
 .PP
 gvmap.sh -Ae -Ecolor=#55555522 -Tpng foo.gv > foo.png
+
 
 .SH AUTHOR
 Yifan Hu <yifanhu@research.att.com>
