bring back -o option

--- a/cmd/gvmap/gvmap.1
+++ b/cmd/gvmap/gvmap.1
@@ -81,20 +81,14 @@ The real number v specified the depth of the sea and lake shores in points. If 0
 .BI \-O  
 Do NOT do color assignment optimization that maximizes color difference between neighboring countries
 .TP
+.BI \-o <file> 
+Put output in <file>. Default output is stdout
+.TP
 .BI \-v 
 Verbose mode.
 .TP
 .BI \-z " c" 
 Specified the polygon line color. Default is black.
-
-
-
-.BI \-s " d" 
-The real number d specifies the depth of the shore in points. If 0, the depth is selected automatically. By default d = 0.
-.TP
-.BI \-v
-Set verbose mode.
-
 .SH EXAMPLES
 .PP
 Given a graph foo.gv, one way to generate a layout and highlight the clusters 
