Add description of SUB and SUP elements to HTML-like labels

--- a/doc/infosrc/html.2
+++ b/doc/infosrc/html.2
@@ -21,7 +21,10 @@ easier reading.
 <P>
 Each of the HTML elements has a set of optional attributes.
 Attribute values must appear in double quotes.
-<PRE>&lt;TABLE
+<P>
+  &lt;!-- Table element --&gt;
+<PRE>
+&lt;TABLE
   ALIGN="CENTER|LEFT|RIGHT"
   BGCOLOR="<I>color</I>"
   BORDER="<I>value</I>"
@@ -43,11 +46,13 @@ Attribute values must appear in double quotes.
 &gt;
 </PRE>
 <P>
+  &lt;!-- Table row --&gt;
 <PRE>&lt;TR
   &lt;!-- No attributes --&gt;
 &gt;
 </PRE>
 <P>
+  &lt;!-- Table cell --&gt;
 <PRE>&lt;TD
   ALIGN="CENTER|LEFT|RIGHT|TEXT"
   BALIGN="CENTER|LEFT|RIGHT"
@@ -72,6 +77,7 @@ Attribute values must appear in double quotes.
 </PRE>
 
 <P>
+  &lt;!-- Font specification --&gt;
 <PRE>&lt;FONT
   COLOR="<I>color</I>"
   FACE="<I>fontname</I>"
@@ -80,29 +86,46 @@ Attribute values must appear in double quotes.
 </PRE>
 
 <P>
+  &lt;!-- Line break --&gt;
 <PRE>&lt;BR
   ALIGN="CENTER|LEFT|RIGHT"
 &gt;
 </PRE>
 
 <P>
+  &lt;!-- Image inclusion --&gt;
 <PRE>&lt;IMG
   SCALE="FALSE|TRUE|WIDTH|HEIGHT|BOTH"
   SRC="<I>value</I>"
 &gt;
 </PRE>
 <P>
+  &lt;!-- Italic style --&gt;
 <PRE>&lt;I
   &lt;!-- No attributes --&gt;
 &gt;
 </PRE>
 <P>
+  &lt;!-- Bold style --&gt;
 <PRE>&lt;B
   &lt;!-- No attributes --&gt;
 &gt;
 </PRE>
 <P>
+  &lt;!-- Underlined text --&gt;
 <PRE>&lt;U
+  &lt;!-- No attributes --&gt;
+&gt;
+</PRE>
+<P>
+  &lt;!-- Subscript text --&gt;
+<PRE>&lt;SUB
+  &lt;!-- No attributes --&gt;
+&gt;
+</PRE>
+<P>
+  &lt;!-- Superscript text --&gt;
+<PRE>&lt;SUP
   &lt;!-- No attributes --&gt;
 &gt;
 </PRE>
