Add missing </A> tags

--- a/doc/infosrc/shapes.2
+++ b/doc/infosrc/shapes.2
@@ -95,7 +95,7 @@ attribute can be a comma-separated list of any of these. If the
 style contains conflicts (e.g, <TT>style="dotted, solid"</TT>), the last
 attribute wins.
 <DL>
-<DT><A NAME=d:filled><TT>filled</TT>
+<DT><A NAME=d:filled></A><TT>filled</TT>
   <DD>This value indicates that the node's interior should be filled.
 The color used is the node's <TT>fillcolor</TT> or, if that's not defined, its
 <TT>color</TT>. For unfilled nodes, the interior of the node is transparent to
@@ -115,11 +115,11 @@ digraph G {
 yields the figure<BR>
 <IMG SRC=fill.gif>
 
-<DT><A NAME=d:invisible><TT>invisible</TT>
+<DT><A NAME=d:invisible></A><TT>invisible</TT>
   <DD>Setting this style causes the node not to be displayed at all.
 Note that the node is still used in laying out the graph.
 
-<DT><A NAME=d:diagonals><TT>diagonals</TT>
+<DT><A NAME=d:diagonals></A><TT>diagonals</TT>
   <DD>The diagonals style causes small chords to be drawn near the vertices
 of the node's polygon or, in case of circles and ellipses, two chords near
 the top and the bottom of the shape. The special node shapes
@@ -129,7 +129,7 @@ the top and the bottom of the shape. The special node shapes
 are simply an ordinary square, circle and
 diamond with the diagonals style set.
 
-<DT><A NAME=d:rounded><TT>rounded</TT>
+<DT><A NAME=d:rounded></A><TT>rounded</TT>
   <DD>The rounded style causes the polygonal corners to be smoothed.
 Note that this style also applies to record-based nodes. Indeed,
 the <TT>Mrecord</TT> shape is simply shorthand for setting this style.
@@ -150,14 +150,14 @@ digraph R {
 </XMP>
 to produce the figure<BR>
 <IMG SRC=round.gif>
-<DT><A NAME=d:dashed><TT>dashed</TT>
+<DT><A NAME=d:dashed></A><TT>dashed</TT>
   <DD>This style causes the node's border to be drawn as a dashed line.
-<DT><A NAME=d:dotted><TT>dotted</TT>
+<DT><A NAME=d:dotted></A><TT>dotted</TT>
   <DD>This style causes the node's border to be drawn as a dotted line.
-<DT><A NAME=d:solid><TT>solid</TT>
+<DT><A NAME=d:solid></A><TT>solid</TT>
   <DD>This style causes the node's border to be drawn as a solid line,
 which is the default.
-<DT><A NAME=d:bold><TT>bold</TT>
+<DT><A NAME=d:bold></A><TT>bold</TT>
   <DD>This style causes the node's border to be drawn as a bold line.
 See also <A HREF=attrs.html#d:penwidth>penwidth</A>.
 
