--- a/doc/infosrc/output.2
+++ b/doc/infosrc/output.2
@@ -18,7 +18,7 @@ one of the plugins, in which case, that transformation is not possible.
 <H2>Notes</H2>
 <OL TYPE="1">
 <LI>
-<A NAME=ID>In the formats: -Tcmap, -Tcmapx, -Tsvg, -Tvml, the output generates
+<A NAME=ID></A>In the formats: -Tcmap, -Tcmapx, -Tsvg, -Tvml, the output generates
 'id="node#"' properties for nodes, 'id="edge#"' properties for edges, and 'id="cluster#"' properties for clusters, with the '#' replaced by an internally assigned integer. These strings can be provided instead by an externally provided "id=xxx" attribute on the object.
 Normal "\N" "\E" "\G" substitutions are applied.
 Externally provided id values are not used internally, and it is the use's reponsibilty to ensure
