--- a/cmd/gvedit/gvedit.1
+++ b/cmd/gvedit/gvedit.1
@@ -8,9 +8,15 @@ gvedit \- simple graph editor and viewer
 ]
 .SH DESCRIPTION
 .B gvedit
-
+provides a simple graph editor and viewer. It allows many graphs to be viewed at the
+same time. The text of each graph is displayed in its own text window. 
+.P
+The name of a Graphviz file can be specified on the command line. This graph
+file will be automatically opened on start-up.
 .SH AUTHOR
 Arif Bilgin <arif@research.att.com>
 .br
 Emden R. Gansner <erg@research.att.com>
 .SH SEE ALSO
+.PP
+dot(1), dotty(1), lefty(1)
